typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts:2:5
  |
2 | var b: boolean;
  |     ^

